font preload and tidying up

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -10,6 +10,7 @@
     font-family: 'Radio Canada';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: local(''),
         url('../fonts/radio-canada-v11-latin-regular.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -22,6 +23,7 @@
     font-family: 'Radio Canada';
     font-style: normal;
     font-weight: 500;
+    font-display: swap;
     src: local(''),
         url('../fonts/radio-canada-v11-latin-500.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -34,6 +36,7 @@
     font-family: 'Radio Canada';
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src: local(''),
         url('../fonts/radio-canada-v11-latin-700.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
