--- a/styles/index.css
+++ b/styles/index.css
@@ -523,6 +523,7 @@ address {
 
 .mapContainer img {
     width: 90%;
+    height: auto;
     max-width: 67.5rem;
     min-width: 31.2rem;
     border-style: solid;
