--- a/styles/index.css
+++ b/styles/index.css
@@ -130,6 +130,7 @@ main {
     z-index: 2;
     width: 8%;
     height: 60%;
+    /* border: solid black 3px; */
 }
 
 .heads:hover {
@@ -139,43 +140,37 @@ main {
 .harryInfo {
     /*Positions div for Harry */
     left: 76%;
-    bottom: 22%;
+    bottom: 25%;
 }
 
 .eisenhuthInfo {
     /*Positions div for eisenhuth */
-    left: 53%;
+    left: 50%;
     bottom: 17%;
 }
 
 .melanieInfo {
     /*Positions div for melanie */
-    left: 18%;
-    bottom: 12%;
+    left: 22%;
+    bottom: 15%;
 }
 
 .carmenInfo {
     /*Positions div for Carmen */
     left: 65%;
-    bottom: 10%;
+    bottom: 13%;
 }
 
 .miriamInfo {
     /*Positions div for Miriam */
-    left: 29%;
-    bottom: 11%;
-}
-
-.ubaxInfo {
-    /*Positions div for Ubax */
-    left: 41%;
-    bottom: 5%;
+    left: 33%;
+    bottom: 15%;
 }
 
 .annaInfo {
     /*Positions div for Anna */
-    left: 6%;
-    bottom: 10%;
+    left: 8%;
+    bottom: 15%;
 }
 
 
@@ -1047,7 +1042,7 @@ address {
     .teamPhotoContainer {
         /*section wrapper */
         grid-column: 1 / 6;
-        grid-row: 2/ 7;
+        grid-row: 1 / 6;
         margin: 0 0 0 2rem;
         max-width: 100%;
         height: auto;
