refactor: now uses css to lock screen when modal open

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,11 @@
   display: none !important;
 }
 
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
 main {
   -webkit-box-align: center;
   align-items: center;
