--- a/styles/index-v2.css
+++ b/styles/index-v2.css
@@ -64,6 +64,11 @@ main {
   background-color: white;
 }
 
+.photoAndHeads {
+  width: 300px;
+  height: auto;
+}
+
 .teamPhotoContainer {
   display: -webkit-box;
   display: flex;
@@ -83,68 +88,41 @@ main {
   color: var(--primaryColor);
   font-size: clamp(1.6rem, 0.3636vw + 1.4765rem, 2rem);
   font-weight: 700;
-  margin-left: 2rem;
-}
-
-.photoAndHeads {
-  position: relative;
-  width: 94%;
-  max-width: 50.8rem;
-  min-width: 32rem;
-  height: auto;
+  margin-left: 8rem;
 }
 
 .groupPhoto {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  gap: 8px;
   width: calc(100% - 12px);
   height: auto;
   border-style: solid;
   border-width: 6px;
   border-color: var(--primaryColor);
   border-radius: 3.2rem;
-  z-index: 0;
+  overflow: hidden;
+  background-color: white;
+  padding: 8px 0 8px 0;
 }
 
-.heads {
-  /* The empty divs for selecting staff member info */
-  position: absolute;
-  z-index: 2;
-  width: 8%;
-  height: 60%;
-  /* border: solid black 3px; */
+.heads__btn {
+  width: 108px;
+  border: none;
+  background-color: white;
 }
 
-.heads:hover {
+.heads__img {
+  pointer-events: none;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.heads__img:hover,
+.heads__btn:hover {
   cursor: pointer;
-}
-
-.harryInfo {
-  /*Positions div for Harry */
-  left: 13%;
-  bottom: 15%;
-}
-
-.gerstnerInfo {
-  /*Positions div for gerstner */
-  left: 76%;
-  bottom: 15%;
-}
-
-.melanieInfo {
-  /*Positions div for melanie */
-  left: 41%;
-  bottom: 2%;
-}
-
-.carmenInfo {
-  /*Positions div for Carmen */
-  left: 24%;
-  bottom: 2%;
-}
-
-.miriamInfo {
-  /*Positions div for Miriam */
-  left: 58%;
-  bottom: 2%;
 }
 
 /*Section wrapper */
@@ -1075,7 +1053,7 @@ li {
 
   .teamPhotoContainer {
     /*section wrapper */
-    grid-column: 1 / 6;
+    grid-column: 2 / 6;
     grid-row: 1 / 6;
     margin: 0 0 0 2rem;
     max-width: 100%;
